cabal-version:   3.0
name:            sandbox
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          mikekekeke

-- maintainer:
-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base  ^>=4.15.1.0
    , mtl
    , transformers

  hs-source-dirs:   src
  default-language: Haskell2010
